--- a/classToken/package.json
+++ b/classToken/package.json
@@ -5,7 +5,7 @@
   "main": "truffle.js",
   "scripts": {
     "migrate": "./node_modules/.bin/truffle migrate",
-    "deploy": "./node_modules/.bin/truffle migrate --reset --network matic",
+    "deploy": "./node_modules/.bin/truffle migrate --reset --network rinkeby",
     "compile": "./node_modules/.bin/truffle compile --all",
     "ganache": "ganache-cli -d -i 5777 --gasLimit 0xfffffffffff -m \"enable depend figure right kit daughter job giraffe news window tonight more\""
   },
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
+    "@truffle/contract": "^4.5.23",
     "@truffle/hdwallet-provider": "^2.0.14",
     "dotenv": "^16.0.2",
     "ganache-cli": "^6.12.2",
