--- a/classToken/package.json
+++ b/classToken/package.json
@@ -5,7 +5,7 @@
   "main": "truffle.js",
   "scripts": {
     "migrate": "./node_modules/.bin/truffle migrate",
-    "deploy": "./node_modules/.bin/truffle migrate --reset --network rinkeby",
+    "deploy": "./node_modules/.bin/truffle migrate --reset --network goerli",
     "compile": "./node_modules/.bin/truffle compile --all",
     "ganache": "ganache-cli -d -i 5777 --gasLimit 0xfffffffffff -m \"enable depend figure right kit daughter job giraffe news window tonight more\""
   },
